# 0-shell

./: Cargo.toml  README.md  TODO.md  build.rs  lessons.md  todo.md
src/: ansi.rs  c.rs  commands.rs  error.rs  fork.rs  helpers.rs  input.rs  lib.rs  macros.rs  main.rs  redirect.rs  repl.rs  test_helpers.rs  worker.rs
src/commands/: bg.rs  cat.rs  cd.rs  cp.rs  echo.rs  exit.rs  fg.rs  helpers.rs  jobs.rs  kill.rs  ls.rs  man.rs  mkdir.rs  mv.rs  pwd.rs  redirect.rs  rm.rs  sleep.rs  touch.rs
src/commands/ls/: format.rs  system.rs
src/fork/: child.rs  parent.rs
src/input/: backtrack.rs  split.rs
tests/: integration.rs
