[package]
name = "zero-shell"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
chrono = "0.4.39"
filetime = "0.2.25"
home = "0.5.11"
lazy_static = "1.5.0"
serde_json = "1.0.138"
tempfile = "3.16.0"
terminal_size = "0.4.1"
termion = "4.0.3"
users = "0.11.0"
xattr = "1.4.0"

[dependencies.uuid]
version = "1.13.1"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
